feat: add nodemailer + add .js at all file for ES6

--- a/.env
+++ b/.env
@@ -4,4 +4,5 @@ PG_USER=develup
 PG_PASSWORD=develup
 PG_PORT=5432
 PG_DB_NAME=develup
-
+EMAIL=develup33@gmail.com
+EMAIL_PASSWORD=fpcn lxqx dain fgsi 
