feat: finish nodemailer settings

--- a/.env
+++ b/.env
@@ -5,4 +5,6 @@ PG_PASSWORD=develup
 PG_PORT=5432
 PG_DB_NAME=develup
 EMAIL=develup33@gmail.com
-EMAIL_PASSWORD=fpcn lxqx dain fgsi 
+EMAIL_PASSWORD=tcwq ojvg wkan mmjy 
+# EMAIL=cityzen688@gmail.com
+# EMAIL_PASSWORD=jtjf lbsc swpw kcfh 
