--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
   "description": "",
   "dependencies": {
     "argon2": "^0.41.1",
+    "cookie-parser": "^1.4.7",
+    "cors": "^2.8.5",
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "ioredis": "^5.4.1",
