--- a/package.json
+++ b/package.json
@@ -20,8 +20,10 @@
     "dotenv": "^16.4.5",
     "express": "^4.21.1",
     "ioredis": "^5.4.1",
+    "jsonwebtoken": "^9.0.2",
     "nodemailer": "^6.9.15",
     "otp-generator": "^4.0.1",
-    "pg": "^8.13.0"
+    "pg": "^8.13.0",
+    "uuid": "^10.0.0"
   }
 }
