add otp for signup + redis + jwt

--- a/.env
+++ b/.env
@@ -6,5 +6,4 @@ PG_PORT=5432
 PG_DB_NAME=develup
 EMAIL=develup33@gmail.com
 EMAIL_PASSWORD=tcwq ojvg wkan mmjy 
-# EMAIL=cityzen688@gmail.com
-# EMAIL_PASSWORD=jtjf lbsc swpw kcfh 
+JWT_SECRET=IOHguy7657bj68B
