--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
     "nodemailer": "^6.9.15",
     "otp-generator": "^4.0.1",
     "pg": "^8.13.0",
+    "slugify": "^1.6.6",
     "uuid": "^10.0.0"
   }
 }
