--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "ioredis": "^5.4.1",
     "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
+    "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "otp-generator": "^4.0.1",
     "pg": "^8.13.0",
