--- a/.env
+++ b/.env
@@ -8,3 +8,6 @@ PG_DB_NAME=develup
 EMAIL=develup33@gmail.com
 EMAIL_PASSWORD=tcwq ojvg wkan mmjy 
 JWT_SECRET=IOHguy7657bj68B
+CLOUDINARY_NAME=deacf8wk3
+CLOUDINARY_KEY=341553473999311
+CLOUDINARY_SECRET=ghbU6QoR8aggjUVs89_XKS_HqKk
