--- a/package.json
+++ b/package.json
@@ -29,6 +29,7 @@
     "otp-generator": "^4.0.1",
     "pg": "^8.13.0",
     "slugify": "^1.6.6",
+    "socket.io": "^4.8.1",
     "uuid": "^10.0.0"
   }
 }
