--- a/package.json
+++ b/package.json
@@ -6,6 +6,7 @@
   "scripts": {
     "test": "echo \"Error: no test specified\" && exit 1",
     "dev": "nodemon ./app/app.js",
+    "start": "node ./app/app.js",
     "db:create": "psql -p 5432 -U develup -d develup -f ./app/database/scripts/create_tables.sql",
     "db:seeding": "node ./app/database/scripts/seeding_tables.js"
   },
