--- a/.env
+++ b/.env
@@ -5,6 +5,11 @@ PG_USER=develup
 PG_PASSWORD=develup
 PG_PORT=5432
 PG_DB_NAME=develup
+PG_HOST=localhost
+REDIS_USER=default
+REDIS_PASSWORD=fksuKSRtfcWJpGvzOzVZKEjAgneJUySH
+REDIS_HOST=autorack.proxy.rlwy.net
+REDIS_PORT=43635
 EMAIL=develup33@gmail.com
 EMAIL_PASSWORD=tcwq ojvg wkan mmjy 
 JWT_SECRET=IOHguy7657bj68B
