--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "multer": "^1.4.5-lts.1",
     "nodemailer": "^6.9.15",
     "otp-generator": "^4.0.1",
+    "path": "^0.12.7",
     "pg": "^8.13.0",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
