--- a/.env
+++ b/.env
@@ -1,11 +1,11 @@
 HOST=http://localhost:3000
 HOST_FRONT=http://localhost:5173
 PORT=3000
-PG_USER=develup
-PG_PASSWORD=develup
-PG_PORT=5432
-PG_DB_NAME=develup
-PG_HOST=localhost
+PG_USER=postgres
+PG_PASSWORD=YdviwvMBOQGLLkWCgOVKgGNwbUQsEobV
+PG_PORT=49060
+PG_DB_NAME=railway
+PG_HOST=junction.proxy.rlwy.net
 REDIS_USER=default
 REDIS_PASSWORD=fksuKSRtfcWJpGvzOzVZKEjAgneJUySH
 REDIS_HOST=autorack.proxy.rlwy.net
