--- a/.env.example
+++ b/.env.example
@@ -13,7 +13,7 @@ REDIS_PORT=5432
 # Here is the mail that send email for register
 EMAIL=mailtosendmail@gmail.com
 # Here is the password of mail with google
-EMAIL_PASSWORD=tcwq ojvg wkan mmjy 
+EMAIL_PASSWORD=zdezzdzddzdz
 JWT_SECRET=jwt_secret
 CLOUDINARY_NAME=name
 CLOUDINARY_KEY=key
