--- a/package.json
+++ b/package.json
@@ -30,6 +30,7 @@
     "otp-generator": "^4.0.1",
     "path": "^0.12.7",
     "pg": "^8.13.0",
+    "resend": "^6.1.0",
     "slugify": "^1.6.6",
     "socket.io": "^4.8.1",
     "uuid": "^10.0.0"
